--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -265,6 +265,9 @@
 // パブリックメッセージ
 // ===========================
 .c-pubMsgCard {
+   &.-myWork {
+      background-color: $primary-light;
+   }
    &__infoWrap {
       display: flex;
       justify-content: space-between;
