Laravel / Vue / 仕事カードの修正

--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -286,6 +286,7 @@
          background-color: $gray-600;
       }
       &.-end {
+         cursor: default;
          background-color: $gray-600;
       }
    }
