--- a/resources/sass/object/project/_p-applicant.scss
+++ b/resources/sass/object/project/_p-applicant.scss
@@ -45,6 +45,9 @@
       justify-content: space-between;
       width: 100%;
       padding: 5px 20px;
+      &.-decision {
+         background-color: lightpink;
+      }
       @include mq('xs') {
          padding: 5px 15px;
       }
