--- a/resources/sass/foundation/_f-base.scss
+++ b/resources/sass/foundation/_f-base.scss
@@ -9,6 +9,10 @@ body {
       'Hiragino Sans', Meiryo, sans-serif;
    background-color: $base;
 }
+pre {
+   font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
+      'Hiragino Sans', Meiryo, sans-serif;
+}
 *,
 *::before,
 *::after {
