--- a/resources/sass/object/project/_p-profile.scss
+++ b/resources/sass/object/project/_p-profile.scss
@@ -101,6 +101,7 @@
       font-size: 14px;
       line-height: 1.3;
       letter-spacing: 0.5px;
+      white-space: pre-wrap;
       border: 1px solid $gray-500;
       @include mq('xs') {
          font-size: 13px;
