Laravel / 応募者一覧 / 「現在、応募者はいません」の追記

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1357,6 +1357,10 @@ pre {
   margin-left: -35px;
 }
 
+.c-h2__noItems.-applicantList {
+  padding-top: 10px;
+}
+
 .p-applicant__body {
   border-radius: 2px 0 0 2px;
   min-height: 400px;
