--- a/resources/sass/object/component/_c-section.scss
+++ b/resources/sass/object/component/_c-section.scss
@@ -126,5 +126,8 @@
          padding-top: 40px;
          margin-left: -35px;
       }
+      &.-applicantList {
+         padding-top: 10px;
+      }
    }
 }
