--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2097,12 +2097,12 @@ pre {
   left: 3px;
   width: 18px;
   height: 18px;
-  padding: 3px;
+  padding-top: 3px;
+  padding-right: 1px;
   font-size: 11px;
   font-weight: bold;
   color: #fff;
   text-align: center;
-  vertical-align: 2px;
   background-color: #dc3545;
   opacity: 0.95;
 }
