--- a/resources/sass/object/project/_p-header.scss
+++ b/resources/sass/object/project/_p-header.scss
@@ -169,12 +169,12 @@
       left: 3px;
       width: 18px;
       height: 18px;
-      padding: 3px;
+      padding-top: 3px;
+      padding-right: 1px;
       font-size: 11px;
       font-weight: bold;
       color: $white;
       text-align: center;
-      vertical-align: 2px;
       background-color: $red;
       opacity: 0.95;
    }
