Laravel / 仕事フォーム / 募集終了欄の修正

--- a/resources/sass/object/project/_p-work-form.scss
+++ b/resources/sass/object/project/_p-work-form.scss
@@ -100,7 +100,7 @@
             width: 100%;
          }
       }
-      &.-endRecruitment,
+      &.-endDate,
       &.-hopeDeadline,
       &.-contract {
          width: 70%;
