--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4013,14 +4013,14 @@ pre {
   }
 }
 
-.p-workForm__input.-endRecruitment,
+.p-workForm__input.-endDate,
 .p-workForm__input.-hopeDeadline,
 .p-workForm__input.-contract {
   width: 70%;
 }
 
 @media screen and (max-width: 768px) {
-  .p-workForm__input.-endRecruitment,
+  .p-workForm__input.-endDate,
   .p-workForm__input.-hopeDeadline,
   .p-workForm__input.-contract {
     width: 100%;
