--- a/resources/sass/object/project/_p-work-form.scss
+++ b/resources/sass/object/project/_p-work-form.scss
@@ -101,7 +101,7 @@
          }
       }
       &.-endDate,
-      &.-hopeDeadline,
+      &.-hopeDate,
       &.-contract {
          width: 70%;
          @include mq('md') {
