--- a/resources/sass/object/project/_p-mypage.scss
+++ b/resources/sass/object/project/_p-mypage.scss
@@ -6,7 +6,7 @@
    &__secBody {
       min-height: 100px;
       @include mq('xs') {
-         padding: 15px 10px;
+         padding: 15px 3px 15px 7px;
       }
       &.-notification {
          padding: 20px;
