--- a/resources/sass/object/project/_p-errors.scss
+++ b/resources/sass/object/project/_p-errors.scss
@@ -5,6 +5,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @include mq('xs') {
+         flex-direction: column;
+      }
    }
 
    &__code {
