--- a/public/css/app.css
+++ b/public/css/app.css
@@ -601,7 +601,6 @@ pre {
   text-decoration: none;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.18) 2px 2px 6px;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 414px) {
@@ -621,12 +620,6 @@ pre {
     flex-basis: 49%;
     padding: 25px 5px 15px;
     margin: 0 5px 5px 0;
-  }
-}
-
-@media all and (-ms-high-contrast: none) {
-  .c-workCard {
-    border: 1px solid #e9ecef;
   }
 }
 
@@ -686,9 +679,6 @@ pre {
   /* Chrome, Safari 対応 */
   scrollbar-width: none;
   /* Firefox 対応 */
-  -ms-overflow-style: none;
-  /* IE11, Edge 対応 */
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 414px) {
@@ -710,24 +700,11 @@ pre {
   display: none;
 }
 
-@media all and (-ms-high-contrast: none) {
-  .c-workCard__head {
-    font-size: 14px;
-  }
-}
-
 .c-workCard__contract {
   display: flex;
   flex-basis: 50px;
   justify-content: space-between;
   margin-top: 4px;
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .c-workCard__contract {
-    position: relative;
-  }
 }
 
 .c-workCard__contractIconWrap {
@@ -984,19 +961,11 @@ pre {
   max-width: 50px;
   min-height: 50px;
   max-height: 50px;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 320px) {
   .c-dmMsgCard__userImg {
     display: none;
-  }
-}
-
-@media all and (-ms-high-contrast: none) {
-  .c-dmMsgCard__userImg {
-    width: 50px;
-    height: 50px;
   }
 }
 
@@ -1094,6 +1063,12 @@ pre {
   border-radius: 0 0 2px 2px;
 }
 
+@media screen and (max-width: 414px) {
+  .c-flash {
+    top: 60px;
+  }
+}
+
 .c-form__input {
   line-height: 1.3;
   letter-spacing: 0.5px;
@@ -1162,13 +1137,6 @@ pre {
 .c-img {
   border-radius: 50%;
   object-fit: cover;
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .c-img {
-    font-family: "object-fit: cover;", sans-serif;
-  }
 }
 
 .c-pagination {
@@ -1271,7 +1239,6 @@ pre {
   padding: 20px 0 10px 0;
   padding-left: calc(50% - 323px);
   background-color: #fff;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 768px) {
@@ -1296,12 +1263,6 @@ pre {
   .c-h2__workCardBody {
     padding: 5px 0 10px 0;
     background-color: transparent;
-  }
-}
-
-@media all and (-ms-high-contrast: none) {
-  .c-h2__workCardBody {
-    padding-left: calc(50% - 355px);
   }
 }
 
@@ -1689,7 +1650,7 @@ pre {
 
 @media screen and (max-width: 320px) {
   .p-dm__h2 {
-    padding: 9px 0 7px;
+    padding: 9px 10px 7px;
   }
 }
 
@@ -1740,13 +1701,6 @@ pre {
   max-height: 500px;
   overflow: scroll;
   overflow-x: hidden;
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-dm__msgArea {
-    min-height: 500px;
-  }
 }
 
 .p-dm__msgYou {
@@ -1802,12 +1756,10 @@ pre {
   padding: 15px 15px 45px 15px;
   margin: 0;
   background: #ced4da;
-  /* IE11 対応 */
 }
 
 .p-dm__form > textarea {
   border: none;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 320px) {
@@ -1817,29 +1769,16 @@ pre {
   }
 }
 
-@media all and (-ms-high-contrast: none) {
-  .p-dm__form > textarea {
-    min-width: 85%;
-  }
-}
-
 .p-dm__form.-myWork {
   background-color: #bedcfd;
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-dm__form {
-    min-height: 200px;
-  }
 }
 
 .p-dm__sendBtn {
   right: 57px;
   bottom: 11px;
-  /* IE11 対応 */
 }
 
-@media all and (-ms-high-contrast: none) {
+@media screen and (max-width: 414px) {
   .p-dm__sendBtn {
     right: 15px;
   }
@@ -1856,6 +1795,12 @@ pre {
 @media screen and (max-width: 414px) {
   .p-errors__wrap {
     min-height: calc(100vh - 120px);
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .p-errors__wrap {
+    flex-direction: column;
   }
 }
 
@@ -2103,6 +2048,19 @@ pre {
   background-color: #bedcfd;
 }
 
+.p-header__userImg {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 414px) {
+  .p-header__userImg {
+    margin-right: 17px;
+  }
+}
+
 .p-header__navName {
   font-size: 14px;
 }
@@ -2271,13 +2229,6 @@ pre {
   max-height: 80vh;
   vertical-align: top;
   object-fit: cover;
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-home__topImg {
-    font-family: "object-fit: cover;", sans-serif;
-  }
 }
 
 .p-home__topMsg {
@@ -3247,7 +3198,6 @@ pre {
   border-radius: 2px;
   display: flex;
   padding: 20px 20px 50px;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 768px) {
@@ -3268,17 +3218,10 @@ pre {
   }
 }
 
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__parentMsgWrap {
-    overflow: hidden;
-  }
-}
-
 .p-pubmsg__parentImg {
   width: 60px;
   height: 60px;
   margin-right: 8px;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 768px) {
@@ -3287,23 +3230,8 @@ pre {
   }
 }
 
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__parentImg {
-    float: left;
-    margin-right: 15px;
-  }
-}
-
 .p-pubmsg__parentRight {
   width: 100%;
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__parentRight {
-    float: left;
-    width: 85%;
-  }
 }
 
 .p-pubmsg__parentName {
@@ -3370,18 +3298,11 @@ pre {
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid #dee2e6;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 320px) {
   .p-pubmsg__childWrap {
     padding: 15px 12px;
-  }
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__childWrap {
-    overflow: hidden;
   }
 }
 
@@ -3405,30 +3326,11 @@ pre {
   width: 45px;
   height: 45px;
   margin-right: 8px;
-  /* IE11 対応 */
 }
 
 @media screen and (max-width: 768px) {
   .p-pubmsg__childImg {
     display: none;
-  }
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__childImg {
-    float: left;
-    margin-right: 10px;
-  }
-}
-
-.p-pubmsg__childRight {
-  /* IE11 対応 */
-}
-
-@media all and (-ms-high-contrast: none) {
-  .p-pubmsg__childRight {
-    float: left;
-    width: 85%;
   }
 }
 
@@ -3827,8 +3729,7 @@ pre {
 
 @media screen and (max-width: 414px) {
   .p-workDetail__infoLowerItem.-appNum {
-    flex-basis: 50%;
-    border-right: none;
+    flex-basis: 100%;
   }
 }
 
