--- a/resources/sass/object/project/_p-header.scss
+++ b/resources/sass/object/project/_p-header.scss
@@ -151,6 +151,10 @@
          margin-top: 1px;
          font-size: 13px;
          background-color: $primary-light;
+         @include mq('xs') {
+            padding: 7px 10px;
+            font-size: 12px;
+         }
       }
    }
    &__userImg {
