Laravel / 軽微な修正

--- a/resources/sass/object/project/_p-home.scss
+++ b/resources/sass/object/project/_p-home.scss
@@ -369,7 +369,7 @@
    }
 
    // ===========================
-   // 新着の案件一覧
+   // 新着の仕事一覧
    // ===========================
    &__workCardSec {
       min-height: 400px;
