--- a/resources/sass/object/project/_p-dm-list.scss
+++ b/resources/sass/object/project/_p-dm-list.scss
@@ -1,3 +1,6 @@
+// **********************************
+// DMリスト一覧
+// **********************************
 .p-dmList {
    &__sec {
       height: 70vh;
