--- a/resources/sass/object/project/_p-errors.scss
+++ b/resources/sass/object/project/_p-errors.scss
@@ -1,3 +1,6 @@
+// **********************************
+// エラー画面の定義（404エラーなど）
+// **********************************
 .p-errors {
    &__wrap {
       @include main-height;
