--- a/resources/sass/object/project/_p-pubmsg-list.scss
+++ b/resources/sass/object/project/_p-pubmsg-list.scss
@@ -1,3 +1,6 @@
+// **********************************
+// パブリックメッセージ一覧
+// **********************************
 .p-pubmsgList {
    &__sec {
       height: 70vh;
