--- a/resources/sass/object/project/_p-pubmsg.scss
+++ b/resources/sass/object/project/_p-pubmsg.scss
@@ -1,6 +1,6 @@
-// =========================
+// **********************************
 // パブリックメッセージ
-// =========================
+// **********************************
 .p-pubmsg {
    &__body {
       padding: 20px;
