--- a/resources/sass/object/project/_p-dm.scss
+++ b/resources/sass/object/project/_p-dm.scss
@@ -96,8 +96,8 @@
    }
    &__msgArea {
       flex-basis: 85%;
-      min-height: 500px;
-      max-height: 500px;
+      min-height: 55vh;
+      max-height: 55vh;
       overflow: scroll;
       overflow-x: hidden;
    }
