--- a/resources/sass/object/project/_p-errors.scss
+++ b/resources/sass/object/project/_p-errors.scss
@@ -18,15 +18,16 @@
       width: 70px;
       height: 70px;
       padding: 22px 15px 0 13px;
+      margin-bottom: 50px;
       font-size: 26px;
       color: $base;
       text-align: center;
       background-color: $primary;
-      // border-right: 2px solid;
    }
 
    &__message {
       padding: 10px;
+      margin-bottom: 50px;
       font-size: 18px;
       color: $primary;
       text-align: center;
