--- a/resources/sass/object/component/_c-flash.scss
+++ b/resources/sass/object/component/_c-flash.scss
@@ -1,7 +1,7 @@
 .c-flash {
    position: absolute;
    top: 80px;
-   z-index: 10;
+   z-index: $z-flash;
    width: 100%;
    padding: 10px 0;
    font-size: 14px;
