--- a/resources/sass/object/project/_p-profile.scss
+++ b/resources/sass/object/project/_p-profile.scss
@@ -26,7 +26,7 @@
          flex-direction: row;
          justify-content: center;
          width: 100%;
-         padding: 10px;
+         padding: 10px 20px;
          background-color: #59adff;
       }
    }
@@ -43,7 +43,7 @@
          width: 50px;
          height: 50px;
          margin: 0;
-         margin-right: 10px;
+         margin-right: 5px;
       }
    }
    &__proName {
