Coding / レスポンシブ / スマートフォン修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4076,6 +4076,7 @@ pre {
 @media screen and (max-width: 414px) {
   .p-workList__workCardWrap {
     min-height: 550px;
+    background-color: transparent;
   }
 }
 
