--- a/resources/sass/object/project/_p-work-list.scss
+++ b/resources/sass/object/project/_p-work-list.scss
@@ -38,6 +38,7 @@
       background-color: $white;
       @include mq('xs') {
          min-height: 550px;
+         background-color: transparent;
       }
    }
    &__workCardBody {
