--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -26,6 +26,10 @@
       @include mq('md') {
          font-size: 12px;
       }
+      &.-image {
+         margin-bottom: 5px;
+         text-align: center;
+      }
    }
    &__error {
       display: inline-block;
